--- a/app/src/main/res/layout/activity_user_reg_next.xml
+++ b/app/src/main/res/layout/activity_user_reg_next.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/resbg"
-    tools:context="com.infosolution.dev.tfc.activities.UserRegNext">
+    tools:context="com.infosolution.dev.tfc.user.UserRegNext">
 
     <Spinner
         android:id="@+id/sp_cusinetype"
