--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -97,13 +97,21 @@
         android:layout_height="4dp"
         android:background="#80889CB4"/>
 
-    <android.support.v7.widget.RecyclerView
+    <!--<android.support.v7.widget.RecyclerView
         android:id="@+id/rc_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
 
-         />
+         />-->
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rc_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        />
 
 
 </LinearLayout>
