--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -26,6 +26,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:textColor="@android:color/black"
         android:backgroundTint="#99000000"
         android:hint="Enter Old Password"/>
 
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:textColorHint="#80000000"
         android:layout_marginLeft="20dp"
+        android:textColor="@android:color/black"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="#99000000"
