--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -15,11 +15,20 @@
         android:layout_height="400dp"
         android:src="@drawable/abc" />
 
+    <TextView
+        android:id="@+id/tv_totalprice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#00DDCB"
+        android:text="0"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
