--- a/app/src/main/res/layout/activity_signup_mail.xml
+++ b/app/src/main/res/layout/activity_signup_mail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/signupbg"
     android:orientation="vertical"
-    tools:context="com.infosolution.dev.tfc.activities.SignupMailActivity">
+    tools:context="com.infosolution.dev.tfc.activities.SignupUserActivity">
 
 
     <ImageView
