--- a/app/src/main/res/layout/fragment_order_history.xml
+++ b/app/src/main/res/layout/fragment_order_history.xml
@@ -65,7 +65,7 @@
         />
 
 
-    <GridView
+  <!--  <GridView
         android:id="@+id/gv_producthis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,7 +75,14 @@
         android:gravity="center"
         android:columnWidth="100dp"
         android:stretchMode="columnWidth">
-    </GridView>
+    </GridView>-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rc_orderhis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        />
    <!-- </LinearLayout>
 </ScrollView>-->
 </LinearLayout>
