--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,8 +6,18 @@
     android:layout_height="match_parent"
     android:background="#eeeeee"
     android:orientation="vertical"
-    tools:context="com.infosolution.dev.tfc.activities.ChangePasswordActivity">
+    tools:context="com.infosolution.dev.tfc.user.ChangePasswordActivity">
 
+    <include
+        layout="@layout/comments_actionbar"
+        android:id="@+id/ab_changepassworda"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -64,5 +74,6 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"/>
-
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
