--- a/app/src/main/res/layout/content_business_navigation.xml
+++ b/app/src/main/res/layout/content_business_navigation.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.infosolution.dev.tfc.user.Navigation"
-    tools:showIn="@layout/app_bar_navigation">
+    tools:context="com.infosolution.dev.tfc.business.BusinessNavigation"
+    tools:showIn="@layout/app_bar_business_navigation">
 
     <FrameLayout
-        android:id="@+id/frame"
+        android:id="@+id/framebusi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
 
 </android.support.constraint.ConstraintLayout>
