--- a/app/src/main/res/layout/fragment_edit_profile_busi.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_busi.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f5f5f5"
-    android:layout_gravity="center_horizontal"
-    tools:context="com.infosolution.dev.tfc.fragment.EditProfileFragment">
+    android:layout_gravity="center_horizontal">
 
     <ImageView
         android:id="@+id/iv_imgep"
@@ -14,6 +13,20 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:src="@drawable/icon"/>
+
+
+    <EditText
+        android:id="@+id/et_namep"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:hint="Shreyansh "
+        android:textColorHint="#676767"
+        android:gravity="center_horizontal"
+        android:backgroundTint="@android:color/white"/>
+
 
     <EditText
         android:id="@+id/et_nameep"
@@ -24,7 +37,6 @@
         android:layout_marginRight="20dp"
         android:hint="Shreyansh srivastva"
         android:textColorHint="#676767"
-        android:textColor="@android:color/black"
         android:gravity="center_horizontal"
         android:backgroundTint="@android:color/white"/>
 
@@ -40,7 +52,6 @@
         android:inputType="textEmailAddress"
         android:textColorHint="#676767"
         android:gravity="center"
-        android:textColor="@android:color/black"
         android:backgroundTint="@android:color/white"/>
 
     <EditText
@@ -54,7 +65,6 @@
         android:inputType="number"
         android:textColorHint="#676767"
         android:gravity="center"
-        android:textColor="@android:color/black"
         android:backgroundTint="@android:color/white"/>
 
 
@@ -83,7 +93,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="115dp"/>
+        android:layout_marginBottom="60dp"/>
 
 
 </LinearLayout>
