--- a/app/src/main/res/layout/home_row.xml
+++ b/app/src/main/res/layout/home_row.xml
@@ -147,6 +147,11 @@
             android:layout_below="@+id/iv_fav"
             android:layout_marginTop="10dp"/>
 
+        <TextView
+            android:id="@+id/res"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
 
 
 
