--- a/app/src/main/res/layout/nav_header_business_navigation.xml
+++ b/app/src/main/res/layout/nav_header_business_navigation.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#000000"
+    android:background="#80000000"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="5dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+
+
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewbusi"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
-        android:layout_gravity="center"
+      android:layout_marginLeft="50dp"
         app:srcCompat="@drawable/icon" />
 
     <TextView
@@ -24,8 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Shreyansh Srivastava"
         android:textStyle="bold"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center"
+        android:layout_marginLeft="15dp"
         android:textColor="#00DDCB"
         android:layout_marginTop="10dp"/>
 
