--- a/app/src/main/res/layout/activity_business_navigation.xml
+++ b/app/src/main/res/layout/activity_business_navigation.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#80000000"
+        android:background="#000000"
         android:fitsSystemWindows="true"
         android:theme="@style/NavigationTheme"
         app:headerLayout="@layout/nav_header_business_navigation"
