--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,6 +25,8 @@
             android:drawableTint="#40000000"
             android:hint="Enter City Name"
             android:padding="8dp"
+            android:imeOptions="actionDone"
+            android:singleLine="true"
             android:textColor="@android:color/black"
             android:textColorHint="#40000000" />
     </LinearLayout>
