--- a/app/src/main/res/layout/home_row.xml
+++ b/app/src/main/res/layout/home_row.xml
@@ -150,7 +150,16 @@
         <TextView
             android:id="@+id/res"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
+
+        <TextView
+            android:id="@+id/fav_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginLeft="10dp"/>
 
 
 
