--- a/app/src/main/res/layout/uploadedmenu_row.xml
+++ b/app/src/main/res/layout/uploadedmenu_row.xml
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@drawable/red"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"/>
         </FrameLayout>
