--- a/app/src/main/res/layout/uploadedmenu_row.xml
+++ b/app/src/main/res/layout/uploadedmenu_row.xml
@@ -112,5 +112,9 @@
             android:background="#2a2442" />
 
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"/>
 
 </LinearLayout>
