--- a/app/src/main/res/drawable/dropdown.xml
+++ b/app/src/main/res/drawable/dropdown.xml
@@ -14,8 +14,8 @@
         <shape>
             <solid android:color="@android:color/transparent" />
             <stroke
-                android:width="0.5dp"
-                android:color="#fff"
+                android:width="1dp"
+                android:color="#ffffff"
                 />
         </shape>
 
