--- a/app/src/main/res/layout/nav_header_business_navigation.xml
+++ b/app/src/main/res/layout/nav_header_business_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="#80000000"
     android:orientation="vertical"
@@ -17,7 +17,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
-      android:layout_marginLeft="50dp"
+       android:layout_gravity="center"
         app:srcCompat="@drawable/icon" />
 
     <TextView
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:text="Shreyansh Srivastava"
         android:textStyle="bold"
-        android:layout_marginLeft="15dp"
+
+       android:gravity="center"
         android:textColor="#00DDCB"
         android:layout_marginTop="10dp"/>
 
