--- a/app/src/main/res/layout/neworder_row.xml
+++ b/app/src/main/res/layout/neworder_row.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#2a2342"
     android:orientation="vertical"
     tools:context="com.infosolution.dev.tfc.activities.BuyNowActivity">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,18 +22,100 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/iv_menuimgnew"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/stat" />
+                    android:layout_height="280dp"
+                    android:background="@android:color/white"
+                    android:scaleType="fitXY" />
 
                 <ImageView
-                    android:id="@+id/iv_logobuy"
+                    android:id="@+id/iv_logonew"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/icon" />
+
+                <TextView
+                    android:id="@+id/tv_usernamenew"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="105dp"
+                    android:text="Shreyansh Srivastava"
+                    android:textColor="@android:color/black" />
+
+                <TextView
+                    android:id="@+id/tv_menunamenew"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="130dp"
+                    android:text="Korma"
+                    android:textColor="@android:color/black" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="155dp"
+                    android:background="#019c96">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Not Delivered"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold"/>
+
+
+
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/tv_datenew"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="184dp"
+                    android:text="Date"
+                    android:textColor="@android:color/black" />
+
+                <ImageView
+                    android:id="@+id/iv_call"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/contacts" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
+                    android:background="#312452"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginRight="25dp"
+                        android:layout_marginTop="5dp"
+                        android:text="Ready"
+                        android:textAppearance="?android:textAppearanceMedium"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -43,6 +127,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right">
+
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="60dp"
@@ -51,14 +136,14 @@
                             android:src="@drawable/pricebackgroundreverse" />
 
                         <TextView
-                            android:id="@+id/tv_quantitybuy"
+                            android:id="@+id/tv_quantitynew"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="4"
-                            android:textStyle="bold"
-                            android:textColor="@android:color/black"
+                            android:layout_gravity="center"
                             android:gravity="center"
-                            android:layout_gravity="center"/>
+                            android:text="4"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold" />
                     </FrameLayout>
 
                     <FrameLayout
@@ -72,15 +157,16 @@
                             android:layout_marginBottom="10dp"
                             android:layout_marginTop="10dp"
                             android:src="@drawable/pricebackground" />
+
                         <TextView
-                            android:id="@+id/tv_pricebuy"
+                            android:id="@+id/tv_pricenew"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="200"
-                            android:textStyle="bold"
-                            android:textColor="@android:color/black"
+                            android:layout_gravity="center"
                             android:gravity="center"
-                            android:layout_gravity="center"/>
+                            android:text="200"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold" />
 
                     </FrameLayout>
 
@@ -90,30 +176,39 @@
                         android:layout_centerInParent="true"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/tv_ctime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Collection Time"
-                            android:textColor="@android:color/black" />
 
                         <TextView
-                            android:id="@+id/tv_timebuy"
+                            android:id="@+id/tv_timenew"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/tv_ctime"
-                            android:layout_marginTop="10dp"
+
                             android:text="9:00 - 9:30PM"
                             android:textColor="@android:color/black" />
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"/>
+
+                    <TextView
+                        android:id="@+id/tv_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"/>
 
 
                 </RelativeLayout>
 
             </FrameLayout>
 
-
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/black"/>
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
