--- a/app/src/main/res/layout/fragment_edit_profile_busi.xml
+++ b/app/src/main/res/layout/fragment_edit_profile_busi.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f5f5f5"
-    android:layout_gravity="center_horizontal">
+    android:id="@+id/fragment_container">
 
     <ImageView
         android:id="@+id/iv_imgep"
@@ -93,7 +93,8 @@
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="55dp"/>
+        android:layout_marginBottom="55dp"
+       />
 
 
 </LinearLayout>
